# DataSpeak

./: EDITABLE_GRID_USAGE.md  FEATURES.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: theme.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/ai/agent/: decomposer.rs  mac_sql.rs  mod.rs  nodes.rs  react_agent.rs  refiner.rs  selector.rs  state.rs
src-tauri/src/ai/classification/: analyzer.rs  mod.rs
src-tauri/src/ai/memory/: storage.rs
src-tauri/src/ai/openrouter/: client.rs  mod.rs  types.rs
src-tauri/src/ai/prompts/: system.rs
src-tauri/src/ai/sanitizer/: validator.rs
src-tauri/src/ai/tools/: definitions.rs  execute_sql.rs  mod.rs  tool_parser.rs
src-tauri/src/ai/visualization/: chart_analyzer.rs  mod.rs  plotly_generator.rs
src-tauri/src/db/: clear.rs  commit.rs  connection.rs  erd.rs  keywords.rs  mod.rs  query.rs  schema.rs  syntax_highlight.rs
src-tauri/src/import_export/: export.rs  import.rs
src-tauri/src/storage/: mod.rs  query_history.rs  stronghold.rs
src/api/: datagrid.ts
src/components/: theme-provider.tsx
src/interfaces/: connection.interface.ts  rust-commands.interface.ts  store.interface.ts
src/lib/: ErrorHandler.ts  geoUtils.ts  queryParser.ts  sqlAutocomplete.ts  sqlSyntaxHighlight.ts
src/stores/: aiStore.ts  connectionStore.ts  editorStore.ts  queryStore.ts  schemaStore.ts  settingsStore.ts  uiStore.ts
src/types/: ai.types.ts  database.types.ts  (+8 more)
(+40 files in other folders)
